src/test/deca/context/valid/valid-floatLeftIntRight.deca
// Description:
//    Un entier est un float pour les déclarations de variables
//
// Résultats:
//    Ligne 11: Pass
//
// Historique:
//    Créé le 10/01/2024

{
   float a = 3;
}
