src/test/deca/context/invalid/declaVariable-readFloatwrongType.deca
// Description:
//    Déclaration de variables
//
// Résultats:
//    Ligne 11: Type de la valeur incompatible
//
// Historique:
//    Créé le 10/01/2024

{
   int a = readFloat();
}
